--- a/src/index.css
+++ b/src/index.css
@@ -47,5 +47,9 @@ header {
    background-color: white;
    border-radius: 3px;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
 
+section{
+   display: flex;
+   flex-direction: column;
 }
