--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,9 @@ header {
    background-color: white;
    border-radius: 3px;
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+   margin-left: 20%;
+   margin-right: 20%;
+   padding: .5em 1em;
 }
 
 section{
