--- a/src/index.css
+++ b/src/index.css
@@ -23,16 +23,20 @@ main {
 header {
    display: flex;
    flex-direction: row;
+   justify-content: flex-end;
 }
 
 .nav li{
    display: inline;
-   margin: 0em .2em;
+   margin-left: .4em;
+
 }
 
 .nav{
-   margin: 1em;
+   display: flex;
+   margin: .5em 0em;
    padding-inline-start:0px;
+   align-items: center;
 }
 
 .modalBack{
@@ -79,18 +83,33 @@ img{
 #playerHead{
    display: flex;
    flex-direction: row;
-   justify-content: flex-start;
+   justify-content: center;
 }
 
 #playerHead>*{
-   margin: .5em 1em;
+   margin: .5em .2em;
 }
 
 #bookNav{
    display: flex;
+   flex-wrap: wrap;
    justify-content: flex-start;
+   margin-bottom: .5em;
+   max-width: 100;
 }
 
 #bookNav>*{
-   margin-right: .3em;
+   margin: .25em;
+}
+
+#playersToggle{
+   display: inline-flex;
+}
+
+#playersToggle p{
+   margin: 0;
+}
+
+#welcome {
+   margin-right: 1em;
 }
