--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,11 @@ img{
    display: flex;
    flex-direction: row;
    justify-content: center;
+   user-select: none;
+}
+
+#playerHead:hover{
+   cursor: pointer;
 }
 
 #playerHead>*{
@@ -96,14 +101,17 @@ img{
    justify-content: flex-start;
    margin-bottom: .5em;
    max-width: 100;
+   user-select: none;
 }
 
 #bookNav>*{
    margin: .25em;
+   user-select: none;
 }
 
 #playersToggle{
    display: inline-flex;
+   user-select: none;
 }
 
 #playersToggle p{
@@ -112,4 +120,22 @@ img{
 
 #welcome {
    margin-right: 1em;
+}
+
+#login, #login>*{
+   display: flex;
+   flex-direction:column;
+   text-align: center;
+   align-items: stretch;
+}
+
+#login form>*{
+   margin-bottom: 1em;
+   text-align: center;
+   user-select: none;
+}
+
+#addBook{
+   display: flex;
+   user-select: none;
 }
