moved add player button, changed nav buttons

--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ img{
 #playerHead{
    display: flex;
    flex-direction: row;
-   justify-content: center;
+   justify-content: flex-end;
    user-select: none;
 }
 
